# panos-changedoc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evidence-bundle.md  generator-guide.md  implementation-plan.md  json-schema.md  normalization-contract.md  user-guide.md  validation-and-limits.md  versioning.md  xpath-map.md
reports/: change-summary.json  change-summary.md
sample_configs/: after.xml  before.xml  manifest.json  spec.yaml
src/panos_changedoc/: __init__.py  cli.py  commands.py  exit_codes.py  generate.py  gui.py  gui_summary.py  ids.py  loader.py  normalizer.py  schema.py  warnings.py
src/panos_changedoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/panos_changedoc/diff/: engine.py  objects.py  ordering.py  references.py  rules.py
tests/fixtures/: after_basic.xml  before_basic.xml
tests/golden/: expected_report.json  expected_report.md  expected_template_catalog.json  expected_template_catalog.yaml  test_golden_outputs.py  test_template_catalog_golden.py
tests/integration/: test_end_to_end.py  test_exit_codes_full.py  test_generate_cli.py  test_large_config.py  test_reference_transitive.py  test_unsupported_dedup.py  test_unsupported_subtypes.py  test_walking_skeleton.py
tests/unit/: test_cli_exit_codes.py  test_diff_rules.py  test_generate_spec.py  test_gui_summary.py  test_ids.py  test_manifest.py  test_markdown_rendering.py  test_markdown_sections.py  test_normalizer.py  test_parsing.py  test_references.py  test_versioning.py
tools/: generate_config.py
(+12 files in other folders)
