[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panos-changedoc"
version = "0.1.1"
description = "Offline PAN-OS XML semantic diff for change documentation"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "PAN-OS ChangeDoc" }]
dependencies = [
  "defusedxml>=0.7.1",
  "jsonschema>=4.22.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-jsonschema",
  "types-defusedxml",
  "types-PyYAML",
]

[project.scripts]
panos-changedoc = "panos_changedoc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
